:bug: shapes overflow hidden

--- a/styles/components/_search.scss
+++ b/styles/components/_search.scss
@@ -36,6 +36,7 @@
 
   .landing-shapes {
     z-index: 1;
+    overflow: hidden;
   }
 
   .landing-search-right {
